@@ -1,3 +1,7 @@
+2009-02-11  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Follow-up for feature #10339: htmlArea RTE: Move editing mode change to plugin
+
 2009-02-04  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #10352: htmlARea RTE: Shift+Enter raises exception in Safari
